[package]
name = "decompiler_optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
regex = "1.8.4"
stylua = "0.18.0"
ws = "0.9.2"
actix-web = "4.3.1"

[[bin]]
name = "websocket"
path = "src/websocket.rs"

[[bin]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "server"
path = "src/server.rs"
